добавил получение всех заявок вам в друзья
